--- a/assets/src/css/site.scss
+++ b/assets/src/css/site.scss
@@ -2,92 +2,68 @@
 
 html,
 body {
-    height: 100%;
+	height: 100%;
 }
 
 .wrap {
-    min-height: 100%;
-    height: auto;
-    margin: 0 auto -60px;
-    padding: 0 0 60px;
+	min-height: 100%;
+	height: auto;
+	margin: 0 auto -41px;
+	padding: 0 0 41px;
+
+	> .container {
+		padding: 70px 15px 20px;
+	}
 }
 
-.wrap > .container {
-    padding: 70px 15px 20px;
-}
+.intro {
+	text-align: center;
+	background-color: transparent;
 
-.footer {
-    height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
-    padding-top: 20px;
-}
-
-.jumbotron {
-    text-align: center;
-    background-color: transparent;
-}
-
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
+	 .btn {
+		font-size: 21px;
+		padding: 14px 24px;
+	}
 }
 
 .not-set {
-    color: #c55;
-    font-style: italic;
-}
-
-/* add sorting icons to gridview sort links */
-a.asc:after, a.desc:after {
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    padding-left: 5px;
-}
-
-a.asc:after {
-    content: /*"\e113"*/ "\e151";
-}
-
-a.desc:after {
-    content: /*"\e114"*/ "\e152";
-}
-
-.sort-numerical a.asc:after {
-    content: "\e153";
-}
-
-.sort-numerical a.desc:after {
-    content: "\e154";
-}
-
-.sort-ordinal a.asc:after {
-    content: "\e155";
-}
-
-.sort-ordinal a.desc:after {
-    content: "\e156";
-}
-
-.grid-view th {
-    white-space: nowrap;
+	color: #c55;
+	font-style: italic;
 }
 
 .hint-block {
-    display: block;
-    margin-top: 5px;
-    color: #999;
+	display: block;
+	margin-top: 5px;
+	color: #999;
+}
+
+form {
+	.required label {
+		white-space: nowrap;
+
+		&:after {
+			color: #e32;
+			content: ' *';
+			display: inline;
+		}
+	}
+
+	img.captcha {
+		cursor: pointer;
+	}
+}
+
+.footer {
+	height: 40px;
+	background-color: #f5f5f5;
+	border-top: 1px solid #ddd;
+	padding-top: 10px;
 }
 
 .error-summary {
-    color: #a94442;
-    background: #fdf7f7;
-    border-left: 3px solid #eed3d7;
-    padding: 10px 20px;
-    margin: 0 0 15px 0;
+	color: #a94442;
+	background: #fdf7f7;
+	border-left: 3px solid #eed3d7;
+	padding: 10px 20px;
+	margin: 0 0 15px 0;
 }
