--- a/assets/src/css/bootstrap.scss
+++ b/assets/src/css/bootstrap.scss
@@ -18,7 +18,7 @@ $icon-font-path: '/assets/webfonts/';
 @import "bootstrap/buttons";
 
 // Components
-//@import "bootstrap/component-animations";
+@import "bootstrap/component-animations";
 @import "bootstrap/dropdowns";
 @import "bootstrap/button-groups";
 @import "bootstrap/input-groups";
