--- a/assets/src/css/bootstrap.scss
+++ b/assets/src/css/bootstrap.scss
@@ -1,7 +1,7 @@
 // Core variables and mixins
 @import "bootstrap/variables";
+@import "bootstrap/custom";
 @import "bootstrap/mixins";
-$icon-font-path: '/assets/webfonts/';
 
 // Reset and dependencies
 @import "bootstrap/normalize";
