--- a/assets/src/css/site.scss
+++ b/assets/src/css/site.scss
@@ -6,6 +6,10 @@ body {
 	text-align: justify;
 }
 
+h1, h2, h3, h4, h5, h6 {
+	text-align: left;
+}
+
 .wrap {
 	min-height: 100%;
 	height: auto;
@@ -15,6 +19,11 @@ body {
 	> .container {
 		padding: 70px 15px 20px;
 	}
+}
+
+.nav > li > a > .glyphicon:after {
+	content: '\00a0';
+	font-family: $font-family-base;
 }
 
 li.flag a {
