--- a/assets/src/css/site.scss
+++ b/assets/src/css/site.scss
@@ -21,6 +21,10 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
+.navbar {
+	@include user-select(none);
+}
+
 .nav > li > a > .glyphicon:after {
 	content: '\00a0';
 	font-family: $font-family-base;
@@ -62,11 +66,12 @@ form {
 	}
 }
 
-.footer {
-	height: 40px;
+footer {
 	background-color: #f5f5f5;
 	border-top: 1px solid #ddd;
+	height: 40px;
 	padding-top: 10px;
+	@include user-select(none);
 }
 
 @media (min-width: 768px) {
